--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          category: bogus
+          category: cluster
           name: new-module
           id: github.com/cloud-native-toolkit/terraform-ibm-new-module
           cloudProvider: ibm
